Downgrade to Java 11 for better compatibility with Spring Boot 1.5.8
Co-Authored-By: Shawn Azman <shawn.d.azman@gmail.com>